Legger til ny fagsak-egenskap EØS_SAK